infrastructure/kubernetes/testing/kafdrop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: credits
  name: kafdrop
  labels:
    app: kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
      - name: kafdrop
        image: obsidiandynamics/kafdrop:4.0.0
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1Gi
            
---
apiVersion: v1
kind: Service
metadata:
  namespace: credits
  name: kafdrop
  labels:
    app: kafdrop
spec:
  selector:
    app: kafdrop
  ports:
    - port: 9000
      name: http
