infrastructure/kubernetes/testing/approuting-ingress.yaml
# Ingress used together with the HTTP Application Routing feature in AKS, not for production
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: credits
  name: credit-api
spec:
  ingressClassName: addon-http-application-routing
  rules:
  - host: credit-api.<Cluster dns>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: credit-api
            port: 
              number: 80
